--- a/webd/css/style.css
+++ b/webd/css/style.css
@@ -1,10 +1,24 @@
 h1 {
     color: blue;
+    text-decoration: underline;
 }
 body  {
     background-color: lightblue;
+    /* learn about rgb */
 }
 button {
     color: red;
     background-color: lightpink;
+}
+/* universal selector *{} ,  */
+#head3 {
+    color: red;
+} 
+/* same id shouold not given to diff elements , for that we use class selector  */
+.myclass {
+    color: darkmagenta;
+}
+h2 {
+    text-align: start;
+
 }
