--- a/webd/practice/pr.css
+++ b/webd/practice/pr.css
@@ -1,7 +1,7 @@
-p {
-  background-color: lightblue;
-    height: 200px;
-    width: 300px;
-    border-width: 2px;
-    border-style: dashed;
+div {
+  display: inline;
+  background-color: brown;
+}
+button {
+  display: block;
 }
