--- a/webd/css/style.css
+++ b/webd/css/style.css
@@ -22,3 +22,18 @@ h2 {
     text-align: start;
 
 }
+#box1 {
+    height: 100px;
+    width: 100px;
+    background-color: rgb(38, 122, 38);
+}
+#box2 {
+    height: 50px;
+    width: 30%;
+    background-color: yellow;
+    margin-left: 10%;
+    font-size: 2em;
+    width: 5em; 
+    /* its 5 times the  font size */
+
+}   
